--- a/app.css
+++ b/app.css
@@ -90,6 +90,9 @@ button:active {
     margin: 0.5rem 0;
 }
 
+#active-projects li h2 {
+    color:#ff0062;
+}
 #finished-projects li h2 {
     color: #0044ff;
 }
